--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,25 @@ body {
     cursor: pointer;
 }
 
+.cbl-user-button .cbl-arrow-circle {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    margin-top: -8px;
+    margin-right: -8px;
+    width: 16px;
+    height: 16px;
+    background-color: #fff;
+    font-size:11px;
+    color: #131313;
+    text-align: center;
+    border-radius: 50px;
+}
+
+.cbl-user-button .cbl-arrow-circle i {
+    line-height: 16px;
+}
+
 .cbl-user-button .cbl-user-info {
     display: inline-flex;
     flex-direction: column;
@@ -280,7 +299,7 @@ body {
     color: #131313;
 }
 
-.cbl-user-button .cbl-user-info > span {
+.cbl-user-button .cbl-user-info>span {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -348,7 +367,8 @@ body.cbl-top-banner-visible .cbl-menu-nav {
 
 /* Handle on hover */
 .cbl-menu-nav .cbl-sidebar-wrapper::-webkit-scrollbar-thumb:hover {
-    background: #007868;;
+    background: #007868;
+    ;
 }
 
 .cbl-menu-nav .cbl-sidebar-top-content {
@@ -368,11 +388,40 @@ body.cbl-top-banner-visible .cbl-menu-nav {
     /*border-bottom: solid 1px #ddd;*/
     outline: none;
     box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, .15);
+    position: relative;
 }
 
 .cbl-menu-nav .cbl-logo-button-toggle .cbl-isologo-wrapper {
     overflow: hidden;
     text-align: left;
+}
+
+.cbl-menu-nav .cbl-logo-button-toggle .cbl-arrow-circle {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    margin-right: -8px;
+    margin-top: -8px;
+    background-color: #fff;
+    color: #131313;
+    width: 16px;
+    height: 16px;
+    border-radius: 50px;
+    font-size: 11px;
+    border: solid 1px #8f8f8f;
+    transition: all ease .4s;
+}
+
+.cbl-menu-nav .cbl-logo-button-toggle .cbl-arrow-circle i {
+    line-height: 14px;
+}
+
+body.sidebar-open .cbl-menu-nav .cbl-logo-button-toggle .cbl-arrow-circle {
+    transform: rotate(180deg);
+}
+
+.cbl-menu-nav .cbl-logo-button-toggle:hover .cbl-arrow-circle {
+    box-shadow: inset 0 1px 0 0 rgb(255 255 255 / 50%), 0 0 0 4px rgb(0 0 0 / 15%) !important;
 }
 
 .cbl-menu-nav .cbl-sidebar-list {
@@ -512,7 +561,7 @@ body.sidebar-open .cbl-menu-nav .cbl-sidebar-list .tooltip {
     padding: 20px;
     border: solid 1px #C6C6C6;
     border-radius: 0 10px 10px 10px;
-    box-shadow: 0px 1px 2px 0px rgb(0 0 0 / 10%);
+    box-shadow: 0px 1px 5px 0px rgb(0 0 0 / 25%);
 }
 
 .cbl-menu-nav .cbl-sidebar-dropdown ul {
@@ -558,7 +607,7 @@ body.sidebar-open .cbl-menu-nav .cbl-sidebar-list .tooltip {
     left: inherit;
     right: 0;
     border: solid 1px #C6C6C6;
-    box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, .10);
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, .25);
     /*min-height: 300px;*/
 }
 
@@ -925,10 +974,7 @@ body.sidebar-open .cbl-menu-nav .cbl-sidebar-list .tooltip {
     margin-right: 10px;
 }
 
-body.sidebar-open,
-body.usermenu-open {
-    overflow: hidden;
-}
+
 
 .cbl-content-wrapper {
     position: relative;
@@ -945,9 +991,12 @@ body.sidebar-open .cbl-menu-nav {
     width: 220px;
 }
 
-body.sidebar-open .cbl-content-wrapper,
-body.sidebar-open .cbl-top-nav-wrapper {
+body.sidebar-open .cbl-content-wrapper {
     padding-left: 220px;
+}
+
+body.sidebar-open .cbl-top-nav-wrapper {
+    padding-left: 240px;
 }
 
 .cbl-menu-nav .cbl-menu-wrapper-mobile {
@@ -1096,11 +1145,12 @@ body.sidebar-open .cbl-top-nav-wrapper {
 .cbl-menu-nav .cbl-logo-button-toggle:focus-visible,
 .cbl-menu-nav .cbl-sidebar-list>li>a:focus-visible,
 .cbl-company-input-wrapper select:focus-visible,
-.cbl-top-icon-list>li>button:focus-visible, 
+.cbl-top-icon-list>li>button:focus-visible,
 .cbl-top-icon-list>li>a:focus-visible,
 .cbl-user-button:focus-visible,
 .cbl-top-nav .select2-container *:focus-visible,
-.cbl-search-wrapper .cbl-search-input:focus-visible,
+/*.cbl-search-wrapper .cbl-search-input:focus-visible,*/
+.tab-focus,
 .cbl-menu-nav .cbl-sidebar-dropdown ul a:focus-visible {
     box-shadow: inset 0 1px 0 0 rgb(102 191 255 / 50%), 0 0 0 4px rgb(0 0 0 / 15%) !important;
 }
@@ -1133,7 +1183,7 @@ body.sidebar-open .cbl-top-nav-wrapper {
     body.cbl-top-banner-visible .cbl-content-wrapper {
         padding-top: 84px !important;
     }
-    
+
     .cbl-top-icon-list,
     .cbl-company-input-wrapper,
     .cbl-user-button {
@@ -1212,5 +1262,10 @@ body.sidebar-open .cbl-top-nav-wrapper {
     body.cbl-top-banner-visible .cbl-menu-nav {
         top: 0;
         height: 100vh;
+    }
+
+    body.sidebar-open,
+    body.usermenu-open {
+        overflow: hidden;
     }
 }
